# ipv-poo-projeto1-2023

./: .gitignore  CMakeLists.txt  Empresa1XML_OUT.xml  EstadoMotor.h  Fabrica.cpp  Fabrica.h  Makefile  Menu.cpp  Menu.h  Motor.cpp  Motor.h  Ponto.h  README.md  Relogio.h  Sensor.cpp  Sensor.h  User.cpp  User.h  UserPermissions.h  Uteis.h  XMLReader.cpp  XMLReader.h  XMLWriter.h  cmake_install.cmake  dados-teste.xml  fabrica.xml  festado.xml  main.cpp  rel.xml  relatorio.xml  tinyxml2.cpp
